@@ -35,6 +35,7 @@
 #include "scheme.h"
 
 namespace scheme {
+    Object listEx(VM* theVM, int argc, const Object* argv);
     Object listTransposeAddEx(VM* theVM, int argc, const Object* argv);
     Object caaaarEx(VM* theVM, int argc, const Object* argv);
     Object caaadrEx(VM* theVM, int argc, const Object* argv);
