@@ -103,9 +103,9 @@
 ;(time-bench boyer 3)
 ;(time-bench browse 120)
 ;(time-bench cpstak 80)
-(time-bench ctak 25)
-;; ;(time-bench dderiv 160000)
-;; (time-bench deriv 320000)
+;(time-bench ctak 25)
+;(time-bench dderiv 160000)
+(time-bench deriv 320000)
 ;; ;(time-bench destruc 100)
 ;; (time-bench diviter 200000)
 ;; (time-bench divrec 140000)
